--- a/Emu/SEGACD/config_hidden.json
+++ b/Emu/SEGACD/config_hidden.json
@@ -17,11 +17,11 @@
     },
     {
       "name": "Change core to genesis_plus_gx",
-      "launch": "genesis_plus_gx.sh"
+      "launch": "/mnt/SDCARD/.tmp_update/emu_setup/core/genesis_plus_gx.sh"
     },
     {
       "name": "✓ Core is picodrive",
-      "launch": "picodrive.sh"
+      "launch": "/mnt/SDCARD/.tmp_update/emu_setup/core/picodrive.sh"
     },
     {
       "name": "CPU Mode: (SMART)/performance/overclock",
