--- a/Emu/GBC/config_hidden.json
+++ b/Emu/GBC/config_hidden.json
@@ -24,7 +24,7 @@
       "launch": "/mnt/SDCARD/.tmp_update/emu_setup/core/gambatte.sh"
     },
     {
-      "name": "CPU Mode: (SMART)/performance/overclock",
+      "name": "CPU Mode: (✓SMART)-performance-overclock",
       "launch": "/mnt/SDCARD/.tmp_update/emu_setup/speed/Performance.sh"
     }
   ]
