--- a/Emu/MS/config_hidden.json
+++ b/Emu/MS/config_hidden.json
@@ -28,7 +28,7 @@
       "launch": "/mnt/SDCARD/.tmp_update/emu_setup/core/genesis_plus_gx.sh"
     },
     {
-      "name": "CPU Mode: (SMART)/performance/overclock",
+      "name": "CPU Mode: (✓SMART)-performance-overclock",
       "launch": "/mnt/SDCARD/.tmp_update/emu_setup/speed/Performance.sh"
     }
   ]
