--- a/Emu/SFC/config.json
+++ b/Emu/SFC/config.json
@@ -32,7 +32,7 @@
       "launch": "/mnt/SDCARD/.tmp_update/emu_setup/core/snes9x2005.sh"
     },
     {
-      "name": "CPU Mode: (SMART)/performance/overclock",
+      "name": "CPU Mode: (✓SMART)-performance-overclock",
       "launch": "/mnt/SDCARD/.tmp_update/emu_setup/speed/Performance.sh"
     }
   ]
