--- a/Emu/SUPERVISION/config_hidden.json
+++ b/Emu/SUPERVISION/config_hidden.json
@@ -16,7 +16,7 @@
       "launch": "/mnt/SDCARD/App/aleatorio/aleatorio.sh"
     },
     {
-      "name": "CPU Mode: (SMART)/performance/overclock",
+      "name": "CPU Mode: (✓SMART)-performance-overclock",
       "launch": "/mnt/SDCARD/.tmp_update/emu_setup/speed/Performance.sh"
     }
   ]
