--- a/Emu/ARCADE/config_hidden.json
+++ b/Emu/ARCADE/config_hidden.json
@@ -32,7 +32,7 @@
       "launch": "/mnt/SDCARD/.tmp_update/emu_setup/core/mame2003_xtreme.sh"
     },
     {
-      "name": "CPU Mode: (✓SMART)-performance-overclock",
+      "name": "CPU Mode: (✓SMART)-Performance-Overclock",
       "launch": "/mnt/SDCARD/.tmp_update/emu_setup/speed/Performance.sh"
     }
   ]
