--- a/Emu/GBA/config_hidden.json
+++ b/Emu/GBA/config_hidden.json
@@ -24,7 +24,7 @@
       "launch": "/mnt/SDCARD/.tmp_update/emu_setup/core/mgba.sh"
     },
     {
-      "name": "CPU Mode: (✓SMART)-performance-overclock",
+      "name": "CPU Mode: (✓SMART)-Performance-Overclock",
       "launch": "/mnt/SDCARD/.tmp_update/emu_setup/speed/Performance.sh"
     }
   ]
