--- a/Emu/NDS/config_hidden.json
+++ b/Emu/NDS/config_hidden.json
@@ -17,7 +17,7 @@
       "launch": "/mnt/SDCARD/App/aleatorio/aleatorio.sh"
     },
     {
-      "name": "CPU Mode: (✓SMART)-performance-overclock",
+      "name": "CPU Mode: (✓SMART)-Performance-Overclock",
       "launch": "/mnt/SDCARD/.tmp_update/emu_setup/speed/Performance.sh"
     }
   ]
