change phrasing on SFC core switch

--- a/Emu/SFC/config.json
+++ b/Emu/SFC/config.json
@@ -16,7 +16,7 @@
       "launch": "/mnt/SDCARD/App/aleatorio/aleatorio.sh"
     },
     {
-      "name": "Emu: (✓CHIMERASNES)-mednafen_supafaust-snes9x",
+      "name": "Emu Core: (✓CHIMERASNES)-supafaust-snes9x",
       "launch": "/mnt/SDCARD/.tmp_update/emu_setup/core/mednafen_supafaust.sh"
     },
     {
