--- a/Emu/DC/config_hidden.json
+++ b/Emu/DC/config_hidden.json
@@ -16,8 +16,8 @@
       "launch": "/mnt/SDCARD/App/aleatorio/aleatorio.sh"
     },
     {
-      "name": "CPU Mode: (✓SMART)-Performance-Overclock",
-      "launch": "/mnt/SDCARD/.tmp_update/emu_setup/speed/Performance.sh"
+      "name": "CPU Mode: (✓PERFORMANCE)-Overclock",
+      "launch": "/mnt/SDCARD/.tmp_update/emu_setup/speed/Overclock.sh"
     }
   ]
 }
