fix NGP goof; update LYNX core switch

--- a/Emu/LYNX/config_hidden.json
+++ b/Emu/LYNX/config_hidden.json
@@ -16,11 +16,7 @@
       "launch": "/mnt/SDCARD/App/aleatorio/aleatorio.sh"
     },
     {
-      "name": "✓ Core is mednafen_lynx",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/mednafen_lynx.sh"
-    },
-    {
-      "name": "Change core to handy",
+      "name": "Emu Core: (✓MEDNAFEN)-handy",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/core/handy.sh"
     },
     {
