--- a/Emu/THIRTYTWOX/config_hidden.json
+++ b/Emu/THIRTYTWOX/config_hidden.json
@@ -16,6 +16,10 @@
       "launch": "/mnt/SDCARD/App/aleatorio/aleatorio.sh"
     },
     {
+      "name": "Emu Core: (✓PICODRIVE)-genesis+gx",
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/genesis_plus_gx.sh"
+    },
+    {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/speed/Performance.sh"
     }
