--- a/Emu/FFPLAY/config_hidden.json
+++ b/Emu/FFPLAY/config_hidden.json
@@ -11,7 +11,7 @@
   "launchlist": [
     {
       "name": "Select Random Game",
-      "launch": "/mnt/SDCARD/App/aleatorio/aleatorio.sh"
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
