--- a/Emu/GB/config_hidden.json
+++ b/Emu/GB/config_hidden.json
@@ -16,12 +16,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
-      "name": "Change core to mgba",
+      "name": "Emu Core: (✓GAMBATTE)-mgba",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/core/mgba.sh"
-    },
-    {
-      "name": "✓ Core is gambatte",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/gambatte.sh"
     },
     {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
