--- a/Emu/OPENBOR/config_hidden.json
+++ b/Emu/OPENBOR/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "pak",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random OpenBOR game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
