--- a/Emu/ARDUBOY/config_hidden.json
+++ b/Emu/ARDUBOY/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "hex",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random Arduboy game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
