--- a/Emu/ATARI/config_hidden.json
+++ b/Emu/ATARI/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "a26|bin|zip|7z",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random Atari 2600 game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
