--- a/Emu/CHAI/config_hidden.json
+++ b/Emu/CHAI/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "chailove",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random ChaiLove game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
