--- a/Emu/COMMODORE/config_hidden.json
+++ b/Emu/COMMODORE/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "d64|zip|7z|t64|crt|prg|nib|tap",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random C64 game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
