--- a/Emu/CPC/config_hidden.json
+++ b/Emu/CPC/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "sna|dsk|kcr|bin|zip|7z",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random CPC game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
