--- a/Emu/CPS3/config_hidden.json
+++ b/Emu/CPS3/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "zip|7z|cue",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random CPS3 game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
