--- a/Emu/DC/config_hidden.json
+++ b/Emu/DC/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "cdi|gdi|cue|iso|chd",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random Dreamcast game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
