--- a/Emu/DOOM/config_hidden.json
+++ b/Emu/DOOM/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "zip|wad|exe",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random Doom wad",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
