--- a/Emu/DOS/config_hidden.json
+++ b/Emu/DOS/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "zip|dosz|exe|com|bat|iso|ins|img|ima|vhd|jrc|tc|m3u|m3u8|conf",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random DOS game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
