--- a/Emu/FAIRCHILD/config_hidden.json
+++ b/Emu/FAIRCHILD/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "bin|rom|chf|zip",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random Channel F game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
