--- a/Emu/FAKE08/config_hidden.json
+++ b/Emu/FAKE08/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "p8",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random Fake-08 game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
