--- a/Emu/FBNEO/config_hidden.json
+++ b/Emu/FBNEO/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "zip",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random FBNeo game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
