--- a/Emu/FDS/config_hidden.json
+++ b/Emu/FDS/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "fds|nes|unif|unf|zip|7z",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random FDS game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
