--- a/Emu/GBA/config_hidden.json
+++ b/Emu/GBA/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "bin|gba|zip|7z",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random GameBoy Advance game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
