--- a/Emu/GBC/config_hidden.json
+++ b/Emu/GBC/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "bin|dmg|gb|gbc|zip|7z",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random GameBoy Color game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
