--- a/Emu/INTELLIVISION/config_hidden.json
+++ b/Emu/INTELLIVISION/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "bin|int|zip|7z",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random Intellivision game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
