--- a/Emu/MS/config_hidden.json
+++ b/Emu/MS/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "gen|smd|md|32x|bin|iso|sms|68k|chd|zip|7z",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random Master System game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
