--- a/Emu/MSU1/config_hidden.json
+++ b/Emu/MSU1/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "sfc|smc|fig|bs|st|zip|7z",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random SNES MSU1 game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
