--- a/Emu/N64/config_hidden.json
+++ b/Emu/N64/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "n64|v64|z64|zip|7z",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random Nintendo 64 game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
