--- a/Emu/NGPC/config_hidden.json
+++ b/Emu/NGPC/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "ngp|ngc|zip|7z",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random NeoGeo Pocket Color game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
