--- a/Emu/PS/config_hidden.json
+++ b/Emu/PS/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "bin|cue|img|mdf|pbp|PBP|toc|cbn|m3u|chd|",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random PlayStation game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
