--- a/Emu/QUAKE/config_hidden.json
+++ b/Emu/QUAKE/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "fbl|pak",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random Quake pak",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
