--- a/Emu/SATELLAVIEW/config_hidden.json
+++ b/Emu/SATELLAVIEW/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "bs|sfc|smc|swc|fig|st|zip|7z",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random Satellaview game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
