--- a/Emu/SCUMMVM/config_hidden.json
+++ b/Emu/SCUMMVM/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "scummvm",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random ScummVM game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
