--- a/Emu/SEGASGONE/config_hidden.json
+++ b/Emu/SEGASGONE/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "sms|gg|sg|mv|bin|rom|zip|7z",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random SG-1000 game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
