--- a/Emu/SEVENTYEIGHTHUNDRED/config_hidden.json
+++ b/Emu/SEVENTYEIGHTHUNDRED/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "a78|zip",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random Atari 7800 game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
