--- a/Emu/SFC/config.json
+++ b/Emu/SFC/config.json
@@ -12,7 +12,7 @@
   "extlist": "smc|fig|sfc|gd3|gd7|dx2|bsx|bs|swc|st|zip|7z",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random SNES/SFC game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
