--- a/Emu/SGB/config_hidden.json
+++ b/Emu/SGB/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "bin|gb|gbc|gba|zip|7z",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random Super GameBoy game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
