--- a/Emu/SUFAMI/config_hidden.json
+++ b/Emu/SUFAMI/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "smc|zip|7z",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random Sufami game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
