--- a/Emu/TIC/config_hidden.json
+++ b/Emu/TIC/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "tic|fd|sap|k7|m7|rom|zip|7z",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random Tic-80 game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
