--- a/Emu/VIC20/config_hidden.json
+++ b/Emu/VIC20/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "d64|d6z|d71|d7z|d80|d81|d82|d8z|g64|g6z|g41|g4z|x64|x6z|nib|nbz|d2m|d4m|t64|tap|tcrt|prg|p00|crt|bin|cmd|m3u|vfl|vsf|zip|7z|gz|20|40|60|a0|b0|rom",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random VIC-20 game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
