--- a/Emu/WSC/config_hidden.json
+++ b/Emu/WSC/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "ws|wsc|pc2|zip|7z",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random WonderSwan Color game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
