--- a/Emu/X68000/config_hidden.json
+++ b/Emu/X68000/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "dim|zip|img|d88|88d|hdm|dup|2hd|xdf|hdf|cmd|m3u|7z",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random X68000 game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
