--- a/Emu/ZXS/config_hidden.json
+++ b/Emu/ZXS/config_hidden.json
@@ -12,7 +12,7 @@
   "extlist": "tzx|tap|z80|rzx|scl|trd|zip|7z",
   "launchlist": [
     {
-      "name": "Select Random Game",
+      "name": "Jump to random ZX Spectrum game",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
