--- a/Emu/LYNX/config_hidden.json
+++ b/Emu/LYNX/config_hidden.json
@@ -22,6 +22,14 @@
     {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/speed/Performance.sh"
+    },
+    {
+      "name": "Save current launch settings as per-game override",
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/set_override.sh"
+    },
+    {
+      "name": "Remove per-game launch setting override",
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/remov_override.sh"
     }
   ]
 }
