Fix bug in GS watchdog, allow PSP autosave

--- a/.config/ppsspp/PSP/SYSTEM/controls.ini
+++ b/.config/ppsspp/PSP/SYSTEM/controls.ini
@@ -21,3 +21,5 @@ Analog limiter = 1-60
 RapidFire = 1-59
 SpeedToggle = 1-68
 Rewind = 1-67
+Save State = 10-196:10-4008
+Load State = 10-196:10-4010
