--- a/App/-FirmwareUpdate-/config.json
+++ b/App/-FirmwareUpdate-/config.json
@@ -1,7 +1,7 @@
 {
-  "#label": "A firmware update is available",
+  "#label": "A Firmware Update Is Available",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/file.png",
   "launch": "launch.sh",
-  "description": "Plug in your A30 and run this to get the latest fixes",
+  "description": "Run this to get the latest fixes",
   "expert": false
 }
