Fix analog joystick in RA, load virtual joystick in start up

--- a/RetroArch/retroarch.cfg
+++ b/RetroArch/retroarch.cfg
@@ -1459,11 +1459,11 @@ input_player1_l_x_plus_axis = "nul"
 input_player1_l_x_plus_btn = "nul"
 input_player1_l_x_plus_mbtn = "nul"
 input_player1_l_y_minus = "nul"
-input_player1_l_y_minus_axis = "nul"
+input_player1_l_y_minus_axis = "-1"
 input_player1_l_y_minus_btn = "nul"
 input_player1_l_y_minus_mbtn = "nul"
 input_player1_l_y_plus = "nul"
-input_player1_l_y_plus_axis = "nul"
+input_player1_l_y_plus_axis = "+1"
 input_player1_l_y_plus_btn = "nul"
 input_player1_l_y_plus_mbtn = "nul"
 input_player1_left = "left"
