Change default Amiga core to uae4arm

--- a/Emu/AMIGA/config.json
+++ b/Emu/AMIGA/config.json
@@ -16,8 +16,8 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
-      "name": "Emu Core: (✓PUAE2021)-puae-uae4arm",
-      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/puae.sh"
+      "name": "Emu Core: (✓UAE4ARM)-puae2021-puae",
+      "launch": "/mnt/SDCARD/Emu/.emu_setup/core/puae2021.sh"
     },
     {
       "name": "CPU Mode: (✓SMART)-Performance-Overclock",
