--- a/Emu/ATARI/config.json
+++ b/Emu/ATARI/config.json
@@ -9,7 +9,7 @@
   "useswap": 1,
   "shortname": 0,
   "hidebios": 1,
-  "extlist": "a26|bin|zip|7z",
+  "extlist": "a26|zip|7z|bin",
   "launchlist": [
     {
       "name": "Jump to random Atari 2600 game",
