--- a/Emu/COLECO/config.json
+++ b/Emu/COLECO/config.json
@@ -9,7 +9,7 @@
   "useswap": 1,
   "shortname": 0,
   "hidebios": 1,
-  "extlist": "rom|ri|mx1|mx2|col|dsk|cas|sg|sc|m3u|zip|7z",
+  "extlist": "zip|7z|rom|ri|mx1|mx2|col|dsk|cas|sg|sc|m3u",
   "launchlist": [
     {
       "name": "Jump to random Colecovision game",
