--- a/Emu/CPC/config.json
+++ b/Emu/CPC/config.json
@@ -9,7 +9,7 @@
   "useswap": 1,
   "shortname": 0,
   "hidebios": 1,
-  "extlist": "sna|dsk|kcr|bin|zip|7z",
+  "extlist": "zip|7z|sna|dsk|kcr|bin",
   "launchlist": [
     {
       "name": "Jump to random CPC game",
