--- a/Emu/FAIRCHILD/config.json
+++ b/Emu/FAIRCHILD/config.json
@@ -9,7 +9,7 @@
   "useswap": 0,
   "shortname": 0,
   "hidebios": 1,
-  "extlist": "bin|rom|chf|zip",
+  "extlist": "zip|bin|rom|chf",
   "launchlist": [
     {
       "name": "Jump to random Channel F game",
