--- a/Emu/FDS/config.json
+++ b/Emu/FDS/config.json
@@ -9,7 +9,7 @@
   "useswap": 1,
   "shortname": 0,
   "hidebios": 0,
-  "extlist": "fds|nes|unif|unf|zip|7z",
+  "extlist": "zip|7z|fds|nes|unif|unf",
   "launchlist": [
     {
       "name": "Jump to random FDS game",
