--- a/Emu/GBA/config.json
+++ b/Emu/GBA/config.json
@@ -9,7 +9,7 @@
   "useswap": 1,
   "shortname": 0,
   "hidebios": 1,
-  "extlist": "bin|gba|zip|7z",
+  "extlist": "gba|zip|7z|bin",
   "launchlist": [
     {
       "name": "Jump to random GameBoy Advance game",
