--- a/Emu/GBC/config.json
+++ b/Emu/GBC/config.json
@@ -9,7 +9,7 @@
   "useswap": 0,
   "shortname": 0,
   "hidebios": 0,
-  "extlist": "bin|dmg|gb|gbc|zip|7z",
+  "extlist": "gb|gbc|zip|7z|bin|dmg",
   "launchlist": [
     {
       "name": "Jump to random GameBoy Color game",
