--- a/Emu/INTELLIVISION/config.json
+++ b/Emu/INTELLIVISION/config.json
@@ -9,7 +9,7 @@
   "useswap": 1,
   "shortname": 0,
   "hidebios": 1,
-  "extlist": "bin|int|zip|7z",
+  "extlist": "zip|7z|bin|int",
   "launchlist": [
     {
       "name": "Jump to random Intellivision game",
