--- a/Emu/MD/config.json
+++ b/Emu/MD/config.json
@@ -9,7 +9,7 @@
   "useswap": 1,
   "shortname": 0,
   "hidebios": 0,
-  "extlist": "gen|smd|md|32x|bin|iso|sms|68k|chd|zip|7z",
+  "extlist": "zip|7z|gen|smd|md|32x|bin|iso|sms|68k|chd",
   "launchlist": [
     {
       "name": "Jump to random Genesis/MD game",
