--- a/Emu/MSX/config.json
+++ b/Emu/MSX/config.json
@@ -9,7 +9,7 @@
   "useswap": 1,
   "shortname": 0,
   "hidebios": 1,
-  "extlist": "rom|mx1|mx2|dsk|cas|zip|7z|m3u",
+  "extlist": "zip|7z|rom|mx1|mx2|dsk|cas|m3u",
   "launchlist": [
     {
       "name": "Jump to random MSX game",
