--- a/Emu/N64/config.json
+++ b/Emu/N64/config.json
@@ -9,7 +9,7 @@
   "useswap": 1,
   "shortname": 0,
   "hidebios": 1,
-  "extlist": "n64|v64|z64|zip|7z",
+  "extlist": "zip|7z|n64|z64|v64",
   "launchlist": [
     {
       "name": "Jump to random Nintendo 64 game",
