--- a/Emu/PCE/config.json
+++ b/Emu/PCE/config.json
@@ -9,7 +9,7 @@
   "useswap": 1,
   "shortname": 0,
   "hidebios": 0,
-  "extlist": "pce|ccd|iso|img|chd|cue|zip|7z",
+  "extlist": "pce|zip|7z|ccd|iso|img|chd|cue",
   "launchlist": [
     {
       "name": "Jump to random TG16/PCE game",
