--- a/Emu/PCECD/config.json
+++ b/Emu/PCECD/config.json
@@ -9,7 +9,7 @@
   "useswap": 1,
   "shortname": 0,
   "hidebios": 0,
-  "extlist": "pce|ccd|iso|img|chd|cue|zip|7z",
+  "extlist": "iso|img|chd|pce|ccd|cue|zip|7z",
   "launchlist": [
     {
       "name": "Jump to random TG-CD/PCECD game",
