--- a/Emu/SATELLAVIEW/config.json
+++ b/Emu/SATELLAVIEW/config.json
@@ -9,7 +9,7 @@
   "useswap": 1,
   "shortname": 0,
   "hidebios": 1,
-  "extlist": "bs|sfc|smc|swc|fig|st|zip|7z",
+  "extlist": "zip|7z|bs|sfc|smc|swc|fig|st",
   "launchlist": [
     {
       "name": "Jump to random Satellaview game",
