--- a/Emu/SEGACD/config.json
+++ b/Emu/SEGACD/config.json
@@ -9,7 +9,7 @@
   "useswap": 1,
   "shortname": 0,
   "hidebios": 1,
-  "extlist": "gen|smd|md|32x|cue|iso|sms|68k|chd|m3u|zip|7z",
+  "extlist": "chd|m3u|zip|7z|gen|smd|md|32x|cue|iso|sms|68k",
   "launchlist": [
     {
       "name": "Jump to random Sega CD/MD-CD game",
