--- a/Emu/SEGASGONE/config.json
+++ b/Emu/SEGASGONE/config.json
@@ -9,7 +9,7 @@
   "useswap": 0,
   "shortname": 0,
   "hidebios": 0,
-  "extlist": "sms|gg|sg|mv|bin|rom|zip|7z",
+  "extlist": "zip|7z|sms|gg|sg|mv|bin|rom",
   "launchlist": [
     {
       "name": "Jump to random SG-1000 game",
