--- a/Emu/SFC/config.json
+++ b/Emu/SFC/config.json
@@ -9,7 +9,7 @@
   "useswap": 1,
   "shortname": 0,
   "hidebios": 0,
-  "extlist": "smc|fig|sfc|gd3|gd7|dx2|bsx|bs|swc|st|zip|7z",
+  "extlist": "zip|7z|smc|sfc|fig|gd3|gd7|dx2|bsx|bs|swc|st",
   "launchlist": [
     {
       "name": "Jump to random SNES/SFC game",
