--- a/Emu/SGB/config.json
+++ b/Emu/SGB/config.json
@@ -9,7 +9,7 @@
   "useswap": 1,
   "shortname": 0,
   "hidebios": 0,
-  "extlist": "bin|gb|gbc|gba|zip|7z",
+  "extlist": "gb|gbc|gba|zip|7z|bin",
   "launchlist": [
     {
       "name": "Jump to random Super GameBoy game",
