--- a/Emu/SGFX/config.json
+++ b/Emu/SGFX/config.json
@@ -9,7 +9,7 @@
   "useswap": 0,
   "shortname": 0,
   "hidebios": 1,
-  "extlist": "pce|sgx|cue|ccd|chd|zip|7z",
+  "extlist": "zip|7z|pce|sgx|cue|ccd|chd",
   "launchlist": [
     {
       "name": "Jump to random SuperGrafx game",
