--- a/Emu/SUPERVISION/config.json
+++ b/Emu/SUPERVISION/config.json
@@ -9,7 +9,7 @@
   "useswap": 0,
   "shortname": 0,
   "hidebios": 0,
-  "extlist": "sv|bin|zip|7z",
+  "extlist": "zip|7z|sv|bin",
   "launchlist": [
     {
       "name": "Jump to random Supervision game",
