--- a/Emu/WS/config.json
+++ b/Emu/WS/config.json
@@ -9,7 +9,7 @@
   "useswap": 1,
   "shortname": 0,
   "hidebios": 1,
-  "extlist": "ws|wsc|pc2|zip|7z",
+  "extlist": "ws|wsc|zip|7z|pc2",
   "launchlist": [
     {
       "name": "Select Random WonderSwan Game",
