--- a/Emu/ZXS/config.json
+++ b/Emu/ZXS/config.json
@@ -9,7 +9,7 @@
   "useswap": 1,
   "shortname": 0,
   "hidebios": 1,
-  "extlist": "tzx|tap|z80|rzx|scl|trd|zip|7z",
+  "extlist": "zip|7z|tzx|tap|z80|rzx|scl|trd",
   "launchlist": [
     {
       "name": "Jump to random ZX Spectrum game",
