Remove puae core Runs at PowerPoint fps compared to uae4arm and puae2021

--- a/Emu/AMIGA/config.json
+++ b/Emu/AMIGA/config.json
@@ -16,7 +16,7 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
-      "name": "Emu Core: (✓UAE4ARM)-puae2021-puae",
+      "name": "Emu Core: (✓UAE4ARM)-puae2021",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/core/puae2021.sh"
     },
     {
