restore input_joypad_driver to linuxraw

--- a/RetroArch/retroarch.cfg
+++ b/RetroArch/retroarch.cfg
@@ -270,7 +270,7 @@ input_hold_slowmotion_axis = "nul"
 input_hold_slowmotion_btn = "nul"
 input_hold_slowmotion_mbtn = "nul"
 input_hotkey_block_delay = "5"
-input_joypad_driver = "sdl"
+input_joypad_driver = "linuxraw"
 input_keyboard_layout = ""
 input_load_state = "tab"
 input_load_state_axis = "nul"
