offering to the Sun god

--- a/RetroArch/retroarch.cfg
+++ b/RetroArch/retroarch.cfg
@@ -2969,8 +2969,8 @@ notification_show_netplay_extra = "false"
 notification_show_patch_applied = "false"
 notification_show_refresh_rate = "false"
 notification_show_remap_load = "false"
-notification_show_save_state = "true"
-notification_show_screenshot = "true"
+notification_show_save_state = "false"
+notification_show_screenshot = "false"
 notification_show_screenshot_duration = "0"
 notification_show_screenshot_flash = "0"
 notification_show_set_initial_disk = "false"
