Disable save state thumbnails in RA

--- a/RetroArch/retroarch.cfg
+++ b/RetroArch/retroarch.cfg
@@ -3077,7 +3077,7 @@ savestate_auto_save = "true"
 savestate_directory = "/mnt/SDCARD/Saves/states"
 savestate_file_compression = "false"
 savestate_max_keep = "0"
-savestate_thumbnail_enable = "true"
+savestate_thumbnail_enable = "false"
 savestates_in_content_dir = "false"
 scan_without_core_match = "false"
 screen_brightness = "100"
