update spruce.cfg for settings of GS

--- a/spruce/settings/spruce.cfg
+++ b/spruce/settings/spruce.cfg
@@ -1,9 +1,14 @@
+alwaysUseBoxartInGS=1
 disableWifiInGame=1
 disableNetworkServicesInGame=1
 dropbear=1
 enableNetworkTimeSync=1
 expertRA=1
+maxGamesInGS=10
 recentsTile=1
+runGSAtBoot=1
+runGSOnGameExit=1
+runGSOnTapHome=1
 samba=0
 sftpgo=1
 show_battery_percent=0
