disable vsync for DC and N64

--- a/RetroArch/.retroarch/config/Flycast/Flycast.cfg
+++ b/RetroArch/.retroarch/config/Flycast/Flycast.cfg
@@ -12,3 +12,4 @@ video_aspect_ratio = "1.333299"
 video_message_pos_x = "0.050000"
 video_message_pos_y = "0.050000"
 video_shader_enable = "false"
+video_vsync = "false"
