Moving Syncthing to the cfg file, slight adjustments to things, adding IP address to Samba and Syncthing

--- a/spruce/settings/spruce.cfg
+++ b/spruce/settings/spruce.cfg
@@ -1,6 +1,6 @@
 alwaysUseBoxartInGS=1
-disableWifiInGame=1
 disableNetworkServicesInGame=1
+disableWifiInGame=1
 dropbear=1
 enableNetworkTimeSync=1
 expertRA=1
@@ -13,3 +13,4 @@ samba=0
 sftpgo=1
 show_battery_percent=0
 skip_shutdown_confirm=1
+syncthing=1
