remove shader cycle hotkeys; select+up now enables/disables current shader

--- a/RetroArch/retroarch.cfg
+++ b/RetroArch/retroarch.cfg
@@ -2753,15 +2753,15 @@ input_send_debug_info_axis = "nul"
 input_send_debug_info_btn = "nul"
 input_send_debug_info_mbtn = "nul"
 input_sensors_enable = "true"
-input_shader_next = "down"
+input_shader_next = "nul"
 input_shader_next_axis = "nul"
 input_shader_next_btn = "nul"
 input_shader_next_mbtn = "nul"
-input_shader_prev = "up"
+input_shader_prev = "nul"
 input_shader_prev_axis = "nul"
 input_shader_prev_btn = "nul"
 input_shader_prev_mbtn = "nul"
-input_shader_toggle = "nul"
+input_shader_toggle = "up"
 input_shader_toggle_axis = "nul"
 input_shader_toggle_btn = "nul"
 input_shader_toggle_mbtn = "nul"
