Add updated gpsp core with wireless adapter support Wanna trade pokemon over wifi? There you go

--- a/Emu/GBA/config.json
+++ b/Emu/GBA/config.json
@@ -16,7 +16,7 @@
       "launch": "/mnt/SDCARD/Emu/.emu_setup/aleatorio.sh"
     },
     {
-      "name": "Emu Core: (✓MGBA)-gpsp",
+      "name": "Emu Core: (✓MGBA)-gpsp-gpsp_wireless",
       "launch": "/mnt/SDCARD/Emu/.emu_setup/core/gpsp.sh"
     },
     {
