Removing deprecated expert flag

--- a/App/MiyooGamelist/config.json
+++ b/App/MiyooGamelist/config.json
@@ -2,6 +2,5 @@
   "#label": "Miyoo Gamelist",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/gamelist.png",
   "launch": "launch.sh",
-  "description": "Clean up displayed rom names",
-  "expert": true
+  "description": "Clean up displayed rom names"
 }
