--- a/App/-FirmwareUpdate-/config.json
+++ b/App/-FirmwareUpdate-/config.json
@@ -2,6 +2,5 @@
   "#label": "A Firmware Update Is Available",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/firmwareupdate.png",
   "launch": "launch.sh",
-  "description": "Run this to get the latest fixes",
-  "expert": false
+  "description": "Run this to get the latest fixes"
 }
