--- a/App/BoxartScraper/config.json
+++ b/App/BoxartScraper/config.json
@@ -2,6 +2,5 @@
   "label": "Boxart Scraper",
   "icon": "/mnt/SDCARD/Icons/Default/App/scraper.png",
   "launch": "launch.sh",
-  "description": "Scrape game boxart",
-  "expert": false
+  "description": "Scrape game boxart"
 }
