--- a/App/ThemePacker/config.json
+++ b/App/ThemePacker/config.json
@@ -2,6 +2,5 @@
 	"@label":        "Theme Packer",
 	"icon":	        "/mnt/SDCARD/Themes/SPRUCE/Icons/App/emufresh.png",
 	"launch":       "launch.sh",
-	"description":  "Pack themes into 7z archives",
-	"expert": false
+	"description":  "Pack themes into 7z archives"
 }
