Putting backup into app visibility menu, removing auto restore show

--- a/App/spruceBackup/config.json
+++ b/App/spruceBackup/config.json
@@ -1,7 +1,6 @@
 {
-	"label":        "Spruce Backup",
+	"#label":        "Spruce Backup",
 	"icon":	        "/mnt/SDCARD/Themes/SPRUCE/Icons/App/backup.png",
 	"launch":       "launch.sh",
-	"description":  "Save your configs and settings",
-	"expert": false
+	"description":  "Save your configs and settings"
 }
