--- a/App/-Updater/config.json
+++ b/App/-Updater/config.json
@@ -1,5 +1,5 @@
 {
-  "label": "spruce Updater",
+  "label": "EZ Updater",
   "icon": "/mnt/SDCARD/Updater/imgs/updater.png",
   "launch": "../../Updater/updater.sh",
   "description": "Apply an update to spruce"
