Add settings "tap_home" and "hold_home" for customizing home button behavior

--- a/spruce/settings/spruce.cfg
+++ b/spruce/settings/spruce.cfg
@@ -6,12 +6,12 @@ enableNetworkTimeSync=1
 expertRA=1
 maxGamesInGS=10
 recentsTile=1
-enableGS=0
 runGSAtBoot=1
 runGSOnGameExit=1
-runGSOnTapHome=1
 samba=1
 sftpgo=1
 show_battery_percent=0
 skip_shutdown_confirm=1
 syncthing=1
+tap_home=Game Switcher
+hold_home=In-game menu
