Swapping homekey defaults to standard layout

--- a/spruce/settings/spruce.cfg
+++ b/spruce/settings/spruce.cfg
@@ -17,5 +17,5 @@ show_battery_percent=0
 skip_shutdown_confirm=1
 sleep_powerdown=5m
 syncthing=1
-tap_home=Game Switcher
-hold_home=In-game menu
+tap_home=In-game menu
+hold_home=Game Switcher
