add advanced setting for stretching pico8 to fullscreen

--- a/spruce/settings/spruce.cfg
+++ b/spruce/settings/spruce.cfg
@@ -9,6 +9,7 @@ idlemon_in_game=30m
 idlemon_in_menu=2m
 maxGamesInGS=10
 pico8_control_profile=Racing
+pico8_stretch=1
 recentsTile=1
 rumble_intensity=Medium
 runGSAtBoot=1
